--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -1,21 +1,21 @@
 <div class="footer">
   <div class="container">
-    <div class="pull-left">
-      <a href="https://github.com/puzzle/cryptopus" target="_blank">Cryptopus</a>
+    <div class="float-left">
+      <a href="https://github.com/puzzle/cryptopus" target="_blank" rel="noopener">Cryptopus</a>
       |
-      <a href="https://github.com/puzzle/cryptopus/wiki/User-manual" target="_blank">Hiuf</a>
+      <a href="https://github.com/puzzle/cryptopus/wiki/User-manual" target="_blank" rel="noopener">Hiuf</a>
       |
-      <a href="/changelog">Version 3.0
-      </a>
+      <a href="/changelog">Version 3.0</a>
     </div>
-    <div class="pull-right">
+    <div class="float-right">
       <small>
         outomatisch Abmäudä i
         <span id="countdown">2m</span>
       </small>
     </div>
     <div class="pull-right">
-      <form action="/session/locale" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓">
+      <form action="/session/locale" accept-charset="UTF-8" method="post">
+        <input name="utf8" type="hidden" value="✓">
         <input type="hidden" name="authenticity_token" value="">
         <select id="submit-action" name="new_locale">
           <option value="en">English</option>
