--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -1,4 +1,4 @@
-<BsModal @onSubmit={{action "submit"}} as |Modal|>
+<BsModal @onSubmit={{action "submit"}} @onHidden={{action "abort"}} @renderInPlace="true" @size="lg" as |Modal|>
   <Modal.header>
     <h3 class="modal-title">{{@title}}</h3>
   </Modal.header>
@@ -20,7 +20,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6 ml-auto">
           <div class="form-group col-md-12" id="team-power-select">
             <label name="team">{{t "team"}}</label>
             <PowerSelect class="mb-1" @options={{this.assignableTeams}} @selected={{this.selectedTeam}} @onChange={{this.setSelectedTeam}} @renderInPlace={{true}} @allowClear={{true}} @placeholder={{t "accounts.edit.team_placeholder"}} @searchEnabled={{true}} @searchField={{"name"}} @tabindex="5" as |team|>
@@ -38,29 +38,29 @@
         </div>
       </div>
       <div class="row">
+        <label name="password">{{t "password"}}</label>
+      </div>
+
+      <div class="row">
         <div class="col-md-6">
-          <div class="col-md-12">
-            <label name="password">{{t "password"}}</label>
-          </div>
-          <div class="d-flex col-sm-12">
-            <div class="form-group col-sm-6">
-              <div class="row">
+            <div class="form-group col-sm-12">
                 <Input class="form-control secret mb-10" @value={{this.changeset.cleartextPassword}} @name="cleartextPassword" @tabindex="3" autocomplete="off"/>
-                <PasswordStrengthMeter @password={{this.changeset.cleartextPassword}}/>
-              </div>
+              <PasswordStrengthMeter class="col-6" @password={{this.changeset.cleartextPassword}}/>
             </div>
-            <div class="form-group col-xs-12 col-sm-5 pull-right">
-              <div class="row">
-                <button class="btn btn-secondary btn-block" {{on "click" this.setRandomPassword}} tabindex="4">{{t "accounts.edit.random_password"}}</button>
-              </div>
-            </div>
-          </div>
         </div>
-        <div class="form-group col-md-12">
-          <label name="description">{{t "description"}}</label>
-          <div>
-            <Textarea class="form-control vertical-resize" @value={{this.changeset.description}} @name="description" @tabindex="7"/>
+        <div class="col-md-6">
+          <button class="btn btn-secondary btn-block col-6" {{on "click" this.setRandomPassword}} tabindex="4">{{t "accounts.edit.random_password"}}</button>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group col-md-12">
+            <label name="description">{{t "description"}}</label>
+            <div>
+              <Textarea class="form-control vertical-resize" @value={{this.changeset.description}} @name="description" @tabindex="7"/>
               <ValidationErrorsList @errors={{this.changeset.error.description.validation}}/>
+            </div>
           </div>
         </div>
       </div>
