--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,10 +11,10 @@
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}/
     %link{href: "/favicon.png", rel: "shortcut icon", type: "image/png"}/
-    %link{href: "http://localhost:4200/app/assets/vendor.css", media: "all", rel: "stylesheet"}
-    %link{href: "http://localhost:4200/app/assets/frontend.css", media: "all", rel: "stylesheet"}
-    %script{src: "http://localhost:4200/app/assets/vendor.js", defer: "true"}
-    %script{src: "http://localhost:4200/app/assets/frontend.js", defer: "true"}
+    %link{href: "/ember/assets/vendor-7d06700f4a61d03ad91f4486e6428f2f.css", media: "all", rel: "stylesheet"}
+    %link{href: "/ember/assets/frontend-cc101b488753cbbf7cf914b89d83db2f.css", media: "all", rel: "stylesheet"}
+    %script{src: "/ember/assets/vendor-0c3cf052dd761ff4564e44be4a135f49.js", defer: "true"}
+    %script{src: "/ember/assets/frontend-722d2274b31fd1f929adc474a2a3fa03.js", defer: "true"}
     = csrf_meta_tags
     %title Cryptopus
     = stylesheet_link_tag :application, media: "all", nonce: true
