Wip styles of components

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,9 +1,5 @@
-<div class="container main" role="main">
-
-  <NavBar />
-
-  {{outlet}}
-
+<NavBar />
+{{outlet}}
+<div class="main" role="main">
 </div>
-
 <Footer />
