--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -3,7 +3,7 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 
 @import "ember-bootstrap/bootstrap";
 @import "pod-styles";
-@import "secret_input";
+/*@import "secret_input";*/
 @import 'ember-power-select';
 
 .navbar-custom {
@@ -65,9 +65,7 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
   margin-top: 1%;
 }
 
-.mt-3 {
-  margin-top: 3%;
-}
+
 
 .mb-2 {
   margin-bottom: 2%;
@@ -191,50 +189,4 @@ li a {
   /* filter for #238bca color, used https://codepen.io/sosuke/pen/Pjoqqp to generate */
   filter: invert(42%) sepia(69%) saturate(780%) hue-rotate(164deg)
     brightness(95%) contrast(84%);
-}
-
-.account-thumbnail.account-preview:hover {
-  background-color: lightgray;
-  cursor: pointer;
-}
-
-.account-thumbnail {
-  width: 20%;
-}
-
-.account-thumbnail hr {
-  margin: 0;
-}
-
-.account-thumbnail .account-accountname {
-  min-height: 6em;
-}
-
-.account-thumbnail .account-description {
-  max-height: 3em;
-}
-
-.account-thumbnail.account-detail {
-  background-color: lightgray;
-}
-
-.account-thumbnail.account-detail > div {
-  background-color: white;
-}
-
-.account-detail .icon-clippy {
-  width: 19px;
-}
-
-.account-detail input[disabled] {
-  width: 100%;
-  height: 35px;
-}
-
-.account-detail .copy-btn {
-  height: 35px;
-}
-
-.account-detail-key {
-  width: 20%;
 }
