--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -6,21 +6,21 @@
     {{#each this.teams as |team|}}
       <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}}">
         {{#if team.private}}
-          <img class="icon" src="/ember/assets/images/members.svg" alt="">
+          <img class="icon icon-button" src="/ember/assets/images/members.svg" alt="">
         {{else}}
-          <img class="icon" src="/ember/assets/images/encrypted_small.svg" alt="">
+          <img class="icon icon-button" src="/ember/assets/images/encrypted_small.svg" alt="">
         {{/if}}
         {{team.name}}
         {{#if (or (not (eq team this.navService.selectedTeam)) this.collapsed)}}
-          <img class="icon float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+          <img class="icon icon-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
         {{else}}
-          <img class="icon float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+          <img class="icon icon-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
         {{/if}}
       </a>
       <BsCollapse class="list-group" id="nav-folders-{{team.id}}" @collapsed={{or (not (eq team this.navService.selectedTeam)) this.collapsed}}>
         {{#each team.folders as |folder|}}
           <a role="button"  class="list-group-item {{if (eq folder this.navService.selectedFolder) "bg-blue-two selected-nav-entry" "bg-blue-three"}}" {{on "click" (fn this.setSelectedFolder folder)}}>
-            <img class="icon" src="/ember/assets/images/folder.svg" alt="">
+            <img class="icon icon-button" src="/ember/assets/images/folder.svg" alt="">
             {{folder.name}}
           </a>
         {{/each}}
