--- a/frontend/app/templates/components/team-member-configure.hbs
+++ b/frontend/app/templates/components/team-member-configure.hbs
@@ -1,18 +1,15 @@
-<BsModal @onSubmit={{action "submit"}} @onHidden={{action "abort"}} @renderInPlace="true" @size="lg" as |Modal|>
+<BsModal @onSubmit={{this.submit}} @onHidden={{this.abort}} @renderInPlace="true" @size="lg" as |Modal|>
   <Modal.header>
     <h3 class="modal-title" id="teamConfigureModalLabel">{{t "teams.configure.title"}}</h3>
   </Modal.header>
   <Modal.body>
     <ul class="nav nav-tabs" role="tablist">
-      <li class="nav-item active">
-        <a class="nav-link" id="members-tab" data-toggle="tab" href="#members" role="tab" aria-controls="members" aria-selected="true">{{t "teams.show.members"}}</a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" id="api-users-tab" data-toggle="tab" href="#api-users" role="tab" aria-controls="api-users" aria-selected="false">{{t "profile.api_users.api_users"}}</a>
+        <a class="nav-link" id="api-users-tab" data-toggle="tab" href="#api-users" role="tab" aria-controls="api-users" aria-selected="false"></a>
       </li>
     </ul>
-    <div class="tab-content">
-      <div class="tab-pane active" id="members" role="tabpanel" aria-labelledby="members-tab">
+    <BsTab as |tab|>
+      <tab.pane @title={{t "teams.show.members"}}>
         <div class="columns members">
           <div class="row justify-content-end">
             <div class="col-sm-4 float-right">
@@ -38,34 +35,12 @@
                     {{/if}}
                   </li>
                 {{/each}}
-                <div class="tab-pane" id="api-users" role="tabpanel" aria-labelledby="api-users-tab">
-                  <table class="table table-striped mt-3">
-                    <thead>
-                      <tr>
-                        <td>{{t "user"}}</td>
-                        <td>{{t "description"}}</td>
-                        <td>{{t "teams.form.enabled"}}</td>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {{#each this.apiUsers as |user|}}
-                        <tr>
-                          <td>{{user.username}}</td>
-                          <td>{{user.description}}</td>
-                          <td>
-                            <XToggle @theme="material" @value={{user.enabled}} @onToggle={{fn this.toggleApiUser user}} />
-                          </td>
-                        </tr>
-                      {{/each}}
-                    </tbody>
-                  </table>
-                </div>
               </ul>
             </div>
           </div>
         </div>
-      </div>
-      <div class="tab-pane" id="api-users" role="tabpanel" aria-labelledby="api-users-tab">
+      </tab.pane>
+      <tab.pane @title={{t "profile.api_users.api_users"}}>
         <table class="table table-striped mt-3">
           <thead>
             <tr>
@@ -75,7 +50,7 @@
             </tr>
           </thead>
           <tbody>
-            {{#each @apiUsers as |user|}}
+            {{#each this.apiUsers as |user|}}
               <tr>
                 <td>{{user.username}}</td>
                 <td>{{user.description}}</td>
@@ -86,8 +61,8 @@
             {{/each}}
           </tbody>
         </table>
-      </div>
-    </div>
+      </tab.pane>
+    </BsTab>
   </Modal.body>
   <Modal.footer>
     <BsButton @onClick={{action this.abort}} @type="secondary">{{t "close"}}</BsButton>
