--- a/frontend/app/styles/component-styles/account-show.scss
+++ b/frontend/app/styles/component-styles/account-show.scss
@@ -1,53 +1,95 @@
 & {
-
-  .account-card {
-    height: 14em;
+  .result-password {
+    top: -48px;
+    position: relative;
   }
 
-  .account-card.account-preview:hover {
-    background-color: lightgray;
-    cursor: pointer;
+  .result-username,
+  .result-password {
+    position: relative;
   }
 
-  .account-card hr {
-    margin: 0;
+  .show-password-link,
+  .password-show {
+    display: block;
+    background: #c9c9c9;
+    border-radius: 3px;
+    color: black;
+    z-index: 3;
+    position: relative;
   }
 
-  .account-card .account-accountname {
-    min-height: 6em;
+  .show-password-link,
+  .password-show,
+  .result-username input,
+  .result-password input {
+    padding: 6px 10px;
+    width: 205px;
+    font-size: 14px;
+    border: 1px solid #c9c9c9;
+    display: block;
   }
 
-  .account-card .account-description {
-    max-height: 3em;
+  .result-username input:hover,
+  .result-password input:hover {
+    cursor: text;
   }
 
-  .account-card.account-detail {
-    background-color: lightgray;
+  .result-password,
+  .show-password-link,
+  .password-show {
+    margin-top: 1em;
   }
 
-  .account-card.account-detail > div {
-    background-color: white;
-  }
-
-  .account-detail .icon-clippy {
-    width: 28px;
-  }
-
-  .account-detail input[disabled] {
-    width: 100%;
-    height: 35px;
-  }
-
-  .account-detail .copy-btn {
-    height: 35px;
-  }
-
-  .clip_button{
-    border: 1px solid #C9C9C9;
+  .clip_button {
+    position: absolute;
+    left: 210px;
+    top: -2px;
+    border: 1px solid #c9c9c9;
     position: absolute;
     top: 0;
     right: 0;
     height: 35px;
     width: 50px;
+  }
+
+  .clip_button svg {
+    padding-right: 2px;
+    padding-bottom: 1px;
+  }
+
+  .copied {
+    border-radius: 3px;
+    color: white;
+    background-color: #555;
+    display: none;
+    position: absolute;
+    padding: 4px;
+    margin-left: 268px;
+    margin-top: -28px;
+  }
+
+  .edit_button {
+    padding: 6px;
+    border: 1px solid #c9c9c9;
+    width: 45px;
+    background-color: #ebe3df;
+    margin-left: 6px;
+  }
+
+  .edit_button:hover {
+    background-color: #ffffff;
+  }
+
+  .edit_button img {
+    height: 18px;
+  }
+
+  .visibility-hidden {
+    visibility: hidden;
+  }
+
+  .show-password-link {
+    cursor: pointer;
   }
 }
