--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -6,6 +6,19 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 /*@import "secret_input";*/
 @import "ember-power-select";
 
+// @font-face {
+//   font-family: "text-security-disc";
+//   src: url("~text-security/text-security-disc-compat.eot");
+//   src: url("~text-security/text-security-disc-compat.eot?#iefix")
+//       format("embedded-opentype"),
+//     url("~text-security/text-security-disc.woff2") format("woff2"),
+//     url("~text-security/text-security-disc-compat.ttf") format("truetype");
+// }
+
+// input.secret {
+//   font-family: text-security-disc;
+// }
+
 .main {
   margin-left: 250px;
 }
