--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -38,14 +38,17 @@
         </div>
       </div>
       <div class="row">
-        <label name="password">{{t "password"}}</label>
+        <div class="col">
+          <div class="col">
+            <label name="password">{{t "password"}}</label>
+          </div>
+        </div>
       </div>
-
       <div class="row">
         <div class="col-md-6">
           <div class="form-group col-sm-12">
             <Input class="form-control secret mb-10" @value={{this.changeset.cleartextPassword}} @name="cleartextPassword" @tabindex="3" autocomplete="off"/>
-            <PasswordStrengthMeter class="col-6" @password={{this.changeset.cleartextPassword}}/>
+            <PasswordStrengthMeter class="col-9" @password={{this.changeset.cleartextPassword}}/>
           </div>
         </div>
         <div class="col-md-6">
