--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -1,5 +1,5 @@
 {{#if this.isTeamEditing}}
-  <TeamForm @team={{@team}} @onAbort={{this.toggleTeamEdit}}/>
+  <TeamForm @team={{@team}} @onAbort={{this.toggleTeamEdit}} @title={{t "teams.edit.title"}}/>
 {{/if}}
 {{#if this.isTeamConfiguring}}
   <TeamMemberConfigure @teamId={{@team.id}} @onAbort={{this.toggleTeamConfigure}}/>
