--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -3,13 +3,13 @@
     <div class="float-left">
       <a href="https://github.com/puzzle/cryptopus" target="_blank" rel="noopener">Cryptopus</a>
       |
-      <a href="https://github.com/puzzle/cryptopus/wiki/User-manual" target="_blank" rel="noopener">Hiuf</a>
+      <a href="https://github.com/puzzle/cryptopus/wiki/User-manual" target="_blank" rel="noopener">{{t "help"}}</a>
       |
       <a href="/changelog">Version 3.0</a>
     </div>
     <div class="float-right">
       <small>
-        outomatisch Abmäudä i
+        {{t :auto_logout}}
         <span id="countdown">2m</span>
       </small>
     </div>
