--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -19,16 +19,16 @@
     <p>{{@account.description}}</p>
     <div class="result-username">
       <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@account.cleartextUsername}}/>
-        <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextUsername}}>
-          <img class="icon-clippy img d-inline w-20" src="/ember/assets/images/clipboard.svg" alt="clip">
-        </CopyButton>
+      <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextUsername}}>
+        <img class="icon-clippy img d-inline w-20" src="/ember/assets/images/clipboard.svg" alt="clip">
+      </CopyButton>
     </div>
-    <a class="show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "accounts.show.show_password"}}</a>
+    <a role="button" class="show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "accounts.show.show_password"}}</a>
     <div class="result-password">
       <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
-        <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
-          <img class="icon-clippy img d-inline w-20" src="/ember/assets/images/clipboard.svg" alt="clip">
-        </CopyButton>
+      <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
+        <img class="icon-clippy img d-inline w-20" src="/ember/assets/images/clipboard.svg" alt="clip">
+      </CopyButton>
     </div>
   </div>
   <div class="d-flex flex-row justify-content-between">
