--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -17,8 +17,7 @@
         {{#if this.isStartpage}}
           <Input @class="form-control mr-sm-2" @type="search" placeholder={{t "search.index.type_to_search"}} {{autofocus}} />
         {{else}}
-          <Input @class="form-control mr-sm-2" @type="search" placeholder={{t "search.index.type_to_search"}}/>
-        {{/if}}
+          <Input @class="form-control mr-sm-2" @type="search" @value={{ this.searchQuery }} placeholder={{t "search.index.type_to_search"}} @keyUp={{this.searchByQuery}} />{{/if}}
       </div>
       <navbar.nav @class="ml-auto">
         <BsDropdown as |dd|>
