--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -9,7 +9,7 @@
     </div>
     <div class="float-right">
       <small>
-        {{t :auto_logout}}
+        {{t "auto_logout"}}
         <span id="countdown">2m</span>
       </small>
     </div>
