--- a/frontend/app/templates/components/file-entry-form.hbs
+++ b/frontend/app/templates/components/file-entry-form.hbs
@@ -1,4 +1,4 @@
-<BsModal @onSubmit={{action "submit"}} @onHidden={{action "abort"}} @renderInPlace="true" @size="lg" as |Modal|>
+<BsModal class="modal_file_entry" @onSubmit={{action "submit"}} @onHidden={{action "abort"}} @renderInPlace="true" @size="lg" as |Modal|>
   <Modal.header>
     <h3 class="modal-title align-middle" id="accountFormModalLabel">{{@title}}</h3>
   </Modal.header>
