--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -1,4 +1,6 @@
-<AccountForm @show={{this.isAccountEditing}} @account={{@account}} @title={{t "accounts.edit.title"}}/>
+{{#if this.isAccountEditing}}
+  <AccountForm @account={{@account}} @title={{t "accounts.edit.title"}} @onAbort={{this.toggleAccountEdit}}/>
+{{/if}}
 {{#if this.isFileEntryCreating}}
   <FileEntryForm @class="modal_file_entry" @account={{@account}} @title={{t "file_entries.new.title"}} @onAbort={{this.toggleFileEntryNew}}/>
 {{/if}}
